models_template-main/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress   
metadata:
  name: ${sas-scr-published-name}-ingress
  namespace: ${custom-scr-namespace}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: ${custom-scr-host}
      http:
        paths:
          - path: /${sas-scr-published-name}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ${sas-scr-published-name}-service
                port:
                  number: 8080
